# complete_memory_graph

./: .env.example  .graphifyignore  CLAUDE.md  MEMORY_README.md  NEW_PROJECT_GUIDE.md  README.md  RETROFIT_GUIDE.md  pyproject.toml
.claude/: settings.json
.claude/commands/: checkpoint.md  decision.md  ingest.md  lint.md  resume.md
.claude/hooks/: remind-checkpoint.sh
.claude/skills/: wiki.md
context/: architecture.md  decisions.md  domain-notes.md  people-and-stakeholders.md  project-overview.md  stakeholders.md  worklog.md
context/session-summaries/: 2026-04-30.md  2026-05-06.md  2026-05-15.md
docs/: README.md
plans/: README.md  data-lake-build.md
raw/: README.md  nexus_architecture.html  project-nexus-data-flow-architecture.html  project-nexus-mdm.html  project_nexus_handover_updated_sources.md
scripts/: provision_db.py  refresh_graph.py
specs/: README.md
sql/: 01_schemas.sql  02_audit.sql  03_curated_reference.sql  04_snapshot.sql
src/config/: settings.py
src/curate/: publish.py
src/lib/: db.py  job_log.py  run_context.py
src/nexus_data_lake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_extract.py  test_quality_checks.py  test_run_context.py  test_snapshot.py  test_standardise.py  test_standardise_pipeline.py
wiki/: README.md  architecture-overview.md  cashfluid-project-phases.md  coverage-audit.md  governance-compliance-detail.md  index.md  lake-functions-registry.md  mdm-operating-model.md  module-binding-register.md  open-questions.md  pipeline-and-controls.md  team-and-timeline.md
(+42 files in other folders)
